first compiling working copy

--- a/theme.toml
+++ b/theme.toml
@@ -28,11 +28,8 @@ features = [
   "Taxonomies",
 ]
 
-[author]
-name = "Zeon Studio"
-homepage = "https://zeon.studio"
+[taxonomies]
+author = "authors"
+tag = "tags"
+category = "categories"
 
-[original]
-author = "Zeon Studio"
-homepage = "https://zeon.studio"
-repo = "https://github.com/zeon-studio/themeplate"
