--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "postcss-cli": "^11.0.0",
     "prettier": "^3.3.2",
     "prettier-plugin-go-template": "0.0.15",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwind-bootstrap-grid": "^5.1.0",
     "tailwindcss": "^3.4.4"
-  }
+  },
+  "main": "postcss.config.js",
+  "keywords": []
 }
